Fix to DataGrid for odd sort arrow issue on IE.  \!strict fixes #8807
git-svn-id: http://svn.dojotoolkit.org/src/dojox/trunk@17007 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/grid/resources/Grid.css
+++ b/grid/resources/Grid.css
@@ -95,6 +95,21 @@
 .dojoxGridArrowButtonChar {
 	display:inline;
 }
+
+/* Need to explicitly define how to treat hovering over the arrow on IE */ 
+.dojoxGridArrowButtonNode:hover {
+        cursor: default;
+}
+.dojoxGridArrowButtonChar:hover {
+        cursor: default;
+}
+.dojoxGridSortUp:hover {
+        cursor: default;
+}
+.dojoxGridSortDown:hover {
+        cursor: default;
+}
+
 .dijit_a11y .dojoxGridArrowButtonChar {
 	display:inline !important;
 }
